package BusinessLogic.BL_USER;

import javax.swing.JPanel;

public class Method_permissions {
    public JPanel adminTeacher(){
        return new JPanel();
        
    }
    public JPanel adminPermission(){
        return new JPanel();
        
    }
    public JPanel adminPermissionRole(){
        return new JPanel();

    }
    public JPanel adminPerson(){
        return new JPanel();

    }
    public JPanel adminInstitution(){
        return new JPanel();

    }
    public JPanel adminCatalogo(){
        return new JPanel();

    }
    public JPanel adminCourse(){
        return new JPanel();

    }
    public JPanel view_reports(){
        return new JPanel();
        
    }
    public JPanel activity(){
        System.out.println("asdasdsad");
        return new JPanel();
    }
    public JPanel play(){
        return new JPanel();
        
    }
    
}
