package Math_Spark.Games.diagnostic;

public class Sucession {
    
}
