package Math_Spark.Games.diagnostic;

import java.util.Scanner;

public class Utilitary {
       public static Scanner keyboard=new Scanner(System.in);

}
